--- a/css/style.css
+++ b/css/style.css
@@ -27,10 +27,10 @@ p {
   filter: alpha(opacity=0.5);
   -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=0.5)";
   opacity: 0.5;
-  padding: 20px;
+  padding: 2%;
 	position: fixed;
 	text-align: center;
-	width: 100%;
+	width: 96%;
 }
 
 .smooth.top {
